--- a/myphotos/src/App.css
+++ b/myphotos/src/App.css
@@ -71,3 +71,9 @@ form button {
   margin-top: 3px;
   margin-bottom: 3px;
 }
+
+.contain {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
