--- a/myphotos/src/App.css
+++ b/myphotos/src/App.css
@@ -2,45 +2,20 @@
   text-align: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.default {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 table {
-  margin: 5px;
-  font-size: 0.6em;
+  width: 90vw;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 table th {
@@ -58,8 +33,7 @@ table td {
 }
 
 form {
-  font-size: 0.6em;
-  padding: 3px;
+  width: 90vw;
 }
 
 form div {
