--- a/myphotos/src/App.css
+++ b/myphotos/src/App.css
@@ -81,8 +81,7 @@ form button {
 
 .small-button {
   border: 0;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin: 5px;
   padding: 0.2em;
   font-size: 1.3em;
   border-radius: 3px;
