--- a/myphotos/src/App.css
+++ b/myphotos/src/App.css
@@ -1,19 +1,24 @@
 .App {
-  text-align: left;
+  text-align: center;
+  background: #566e61;
+  width: 100%;
+  overflow-x: hidden;
+  color: beige;
+  margin: 0;
+  height: 100vh;
+
 }
 
 .default {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
+  font-size: 1.1em;
+  margin-top: 5rem;
+  align-content: center;
 }
 
 table {
   width: 90vw;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 5px;
   margin-bottom: 5px;
 }
@@ -52,37 +57,29 @@ form button {
   object-fit: contain;
 }
 
-.default {
-  width: 100vw;
-  height: 100vh;
-  overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  /* align-items: center; */
-  text-align: center;
-  background: #566e61;
-}
-
 #navi {
+  position: fixed;
+  overflow: hidden;
+  top: 0px;
   width: 100vw;
+  height: 4rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-size: 2.8em;
+  font-size: 2.8rem;
   font-weight: bold;
   color: #dbedf0;
-  padding: 10px;
+  /* padding: 10px; */
   background-color: #1b383a;
 }
 
-.navi-icon {
-  width: 15%;
+.navi-menu {
+  width: 15vw;
   height: auto;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-align: left;
-  padding-left: 10px;
+  padding-left: 1.5vw;
 }
 
 .button {
@@ -125,7 +122,8 @@ input {
 
 #menu {
   position: fixed;
-  display: none;
+  margin-top: 4rem;
+  /* display: none; */
   width: 50%;
   height: 100%;
   top: 0;
@@ -135,4 +133,6 @@ input {
   background-color: #1b383a;
   z-index: 2;
   cursor: pointer;
+  background: #254d50;
+  transition: width 1s;
 }
