--- a/myphotos/src/App.css
+++ b/myphotos/src/App.css
@@ -10,7 +10,7 @@
 
 .default {
   font-size: 1.1em;
-  margin-top: 4.6rem;
+  margin-top: 3.8rem;
   margin-bottom: 3.5rem;
   padding: 0.8rem;
 }
@@ -128,15 +128,37 @@ form button {
   align-items: center;
 }
 
+button {
+  cursor: pointer;
+  color: #1760a0;
+  background-color: #cae9ee;
+}
+
+button:active {
+  background: #acc6ca;
+  -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+     -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+          box-shadow: inset 0px 0px 5px #c1c1c1;
+   outline: none;
+}
+
 .small-button {
   width: 8rem;
   border: 0;
-  margin: 5px;
+  margin: 8px;
   padding: 0.2em;
   font-size: 1.3em;
   border-radius: 5px;
-  background-color: #dbedf0;
-  color: #1760a0;
+}
+
+.tiny-button {
+  width: 3rem;
+  height: 2rem;
+  border: 0;
+  margin: 2px;
+  padding: 0.1em;
+  font-size: 0.9em;
+  border-radius: 4px;
 }
 
 input {
