--- a/src/App.css
+++ b/src/App.css
@@ -170,13 +170,20 @@ button:active {
   padding: 0.1em;
   font-size: 0.9em;
   border-radius: 4px;
-  color: white;;
-  background-color: darkseagreen
+  color: white;
+  background-color: darkseagreen;
 }
 
 input {
   margin: 5px;
   font-size: 1.3em;
+  background-color:#dddddd;
+}
+
+textarea {
+  margin: 5px;
+  font-size: 1.3em;
+  background-color:#dddddd;
 }
 
 .content {
