--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
+/*** Common CSS ***/
 .App {
+  --default-background: #518c84;
+  --margin-navi: 3.5rem;
+  --margin-footer: 3.5rem;
+  --default-font-size: 1.1rem;
+  --input-font-size: 1.3rem;
+  --input-background-color: #dddddd;
+  --nave-footer-background-color: #3e687d;
   text-align: center;
-  background: #518c84;
+  background: var(--default-background);
   width: 100%;
   overflow-x: hidden;
   color: white;
@@ -10,19 +18,138 @@
 }
 
 .default {
-  font-size: 1.1em;
-  margin-top: 3rem;
-  margin-bottom: 3.5rem;
-  padding: 0.8rem;
+  font-size: var(--default-font-size);
+  margin-top: var(--margin-navi);
+  margin-bottom: var(--margin-footer);
+  padding-top: 1rem;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
 }
 
+.footer {
+  position: fixed;
+  overflow: hidden;
+  bottom: 0px;
+  width: 100vw;
+  height: var(--margin-footer);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--nave-footer-background-color);
+}  
+
+input {
+  margin: 0.2rem;
+  font-size: var(--input-font-size);
+  background-color: var(--input-background-color);
+}
+
+.input-file {
+  margin: 0.2rem;
+  font-size: var(--default-font-size);
+  background-color: var(--default-background);
+}
+
+textarea {
+  font-size: var(--input-font-size);
+  background-color: var(--input-background-color);
+}
+
+.small-button {
+  width: 8rem;
+  border: 0;
+  margin: 8px;
+  padding: 0.2em;
+  font-size: 1.3em;
+  border-radius: 5px;
+}
+
+.tiny-button {
+  width: 3rem;
+  height: 2rem;
+  border: 0;
+  margin: 2px;
+  padding: 0.1em;
+  font-size: 0.9em;
+  border-radius: 4px;
+  color: white;
+  background-color: darkseagreen;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  width: 70vw;
+  height: 70vh;
+  content: contain;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background: #1760a0;
+}
+
+a:link {
+  text-decoration: none;
+  color: white;
+}
+
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+a:active {
+  text-decoration: underline;
+  color: white;
+}
+
+/*** Home page ***/
+#camera {
+  position: absolute;
+  width: 100vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#place {
+  text-align: left;
+}
+
+#memo {
+  text-align: left;
+}
+
+#memo-input {
+  width: 100%;
+  margin-top: 5px;
+}
+
+#img-temp {
+  margin: 5px;
+  width: 25vw;
+}
+
+/*** LoginPage ***/
 #login {
-  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   width: 20rem;
 }
 
+/*** AlbumPage ***/
 #album {
   font-size: 1.5rem;
 }
@@ -31,8 +158,7 @@ table {
   width: 90vw;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 0.2rem;
 }
 
 table th {
@@ -48,32 +174,13 @@ table td {
   color: #333333;
 }
 
-form {
-  width: 90vw;
-}
-
-form div {
-  margin-top: 3px;
-  margin-bottom: 3px;
-}
-
-form button {
-  margin-top: 3px;
-  margin-bottom: 3px;
-}
-
-.contain {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
+/*** navi ***/
 #navi {
   position: fixed;
   display: flex;
   width: 100vw;
   justify-content: space-between;
-  height: 3.5rem;
+  height: var(--margin-navi);
   color: #dbedf0;
   background-color: #3e687d;
   align-items: center;
@@ -100,106 +207,10 @@ form button {
   padding-right: 0.8rem;
 }
 
-.navi-menu {
-  width: 15vw;
-  height: auto;
-  font-size: 1.5rem;
-  text-align: left;
-  padding-left: 1.5vw;
-}
-
-.navi-menu-text {
-  padding-top:1.3rem;
-  padding-left: 0.8rem;
-  text-align: left;
-  font-size: 1.5rem;
-}
-
-.footer {
-  position: fixed;
-  overflow: hidden;
-  bottom: 0px;
-  width: 100vw;
-  height: 4rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 1.1rem;
-  font-weight: bold;
-  color: #dbedf0;
-  /* padding: 10px; */
-  background-color: #3e687d;
-}  
-
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-button {
-  cursor: pointer;
-  color: #555555;
-  background-color: #dddddd;
-}
-
-button:active {
-  background: #acc6ca;
-  -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
-     -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
-          box-shadow: inset 0px 0px 5px #c1c1c1;
-   outline: none;
-}
-
-.small-button {
-  width: 8rem;
-  border: 0;
-  margin: 8px;
-  padding: 0.2em;
-  font-size: 1.3em;
-  border-radius: 5px;
-}
-
-.tiny-button {
-  width: 3rem;
-  height: 2rem;
-  border: 0;
-  margin: 2px;
-  padding: 0.1em;
-  font-size: 0.9em;
-  border-radius: 4px;
-  color: white;
-  background-color: darkseagreen;
-}
-
-input {
-  margin: 5px;
-  font-size: 1.3em;
-  background-color:#dddddd;
-}
-
-textarea {
-  margin: 5px;
-  font-size: 1.3em;
-  background-color:#dddddd;
-}
-
-.content {
-  width: 70vw;
-  height: 70vh;
-  content: contain;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background: #1760a0;
-}
-
+/*** navi menu ***/
 #menu {
   position: fixed;
-  margin-top: 3.5rem;
+  margin-top: var(--margin-navi);
   /* display: none; */
   width: 35%;
   height: 100%;
@@ -214,52 +225,9 @@ textarea {
   flex-direction: column;
 }
 
-a:link {
-  text-decoration: none;
-  color: white;
-}
-
-a:visited {
-  text-decoration: none;
-  color: white;
-}
-
-a:hover {
-  text-decoration: underline;
-  color: white;
-}
-
-a:active {
-  text-decoration: underline;
-  color: white;
-}
-
-#camera {
-  position: absolute;
-  width: 100vw;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#upload {
-  width: 95%;
-  padding: 5px;
-}
-
-#place {
+.menu-text {
+  padding-top:1.3rem;
+  padding-left: 0.8rem;
   text-align: left;
-}
-
-#memo {
-  text-align: left;
-}
-
-#memo-input {
-  width: 100%;
-  margin-top: 5px;
-}
-
-#img-temp {
-  margin: 5px;
+  font-size: 1.5rem;
 }
