--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,16 @@ textarea {
   align-items: center;
 }
 
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
 .content {
   width: 70vw;
   height: 70vh;
@@ -116,14 +126,6 @@ a:active {
 }
 
 /*** Home page ***/
-#camera {
-  position: absolute;
-  width: 100vw;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 #place {
   text-align: left;
 }
