--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,11 @@ textarea {
   background-color: darkseagreen;
 }
 
+button:active {
+  box-shadow: 0 2px #333333;
+  transform: translateY(2px);
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -249,6 +254,7 @@ table td {
   text-align: left;
   font-size: 2.3rem;
   padding-left: 0.8rem;
+  padding-top: 0.45rem;
 }
 
 #navi #center {
