--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ textarea {
 }
 
 button {
-  box-shadow: 1px 1px 2px 2px rgba(0,0,0,0.2);
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .small-button {
@@ -160,7 +160,7 @@ button:active {
   width: 24rem;
   padding: 1rem;
   border: 2px solid #b9d3da;
-  background-color:rgb(217, 235, 247);
+  background-color: rgb(217, 235, 247);
   margin-left: auto;
   margin-right: auto;
 }
@@ -248,7 +248,7 @@ table td {
   margin: 0.5rem;
   padding: 0.3rem;
   background: beige;
-  color:#333333;
+  color: #333333;
   align-items: center;
   box-shadow: 2px 2px rgba(104, 119, 97, 0.4);
 }
