--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,10 @@ img {
 }
 
 input {
-  border: 0;
+  border: 1px solid rgb(146, 123, 123);
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-family: Arial;
   margin: 0.2rem;
   font-size: var(--input-font-size);
   background-color: var(--input-background-color);
@@ -57,15 +60,17 @@ input {
 }
 
 textarea {
+  border: 1px solid rgb(146, 123, 123);
+  border-radius: 4px;
+  box-sizing: border-box;
+  border-style: groove;
+  font-family: Arial;
   font-size: var(--input-font-size);
   background-color: var(--input-background-color);
 }
 
-button {
-  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
-}
-
 .small-button {
+  box-shadow: 0px 2px rgba(0, 0, 0, 0.2);
   width: 8rem;
   height: 2.4rem;
   margin: 8px;
