--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ input {
 }
 
 .input-file {
+  border: 0;
   margin: 0.2rem;
   font-size: var(--default-font-size);
   background-color: var(--default-background);
@@ -180,7 +181,6 @@ button:active {
 
 a:link {
   text-decoration: none;
-  color: white;
 }
 
 a:visited {
@@ -190,7 +190,7 @@ a:visited {
 
 a:hover {
   text-decoration: underline;
-  color: white;
+  color:antiquewhite;
 }
 
 a:active {
