--- a/src/App.css
+++ b/src/App.css
@@ -70,8 +70,16 @@ textarea {
   background-color: var(--input-background-color);
 }
 
-.small-button {
+button {
   box-shadow: 0px 2px rgba(0, 0, 0, 0.2);
+}
+
+button:active {
+  box-shadow: 0 2px #333333;
+  transform: translateY(2px);
+}
+
+.small-button {
   width: 8rem;
   height: 2.4rem;
   margin: 8px;
@@ -119,11 +127,6 @@ textarea {
   background-color: darkseagreen;
 }
 
-button:active {
-  box-shadow: 0 2px #333333;
-  transform: translateY(2px);
-}
-
 .row {
   display: flex;
   flex-direction: row;
@@ -162,6 +165,7 @@ button:active {
 }
 
 .popup {
+  box-shadow: 1px 2px rgba(0, 0, 0, 0.2);
   width: 70vw;
   padding: 1rem;
   border: 2px solid #b9d3da;
@@ -171,6 +175,7 @@ button:active {
 }
 
 .popup-alert {
+  box-shadow: 1px 2px rgba(0, 0, 0, 0.2);
   width: 70vw;
   padding: 1rem;
   border: 2px solid #b9d3da;
