--- a/src/App.css
+++ b/src/App.css
@@ -116,21 +116,30 @@ button:active {
 }
 
 .tiny-button {
-  width: 3rem;
+  width: 3.2rem;
   height: 2.4rem;
-  border: 0;
-  margin: 2px;
-  padding: 0.1em;
-  font-size: 0.9em;
-  border-radius: 4px;
+  margin: 8px;
+  border: 2px solid #b9d3da;
+  padding: 0.2rem;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  background: #2a4f88;
   color: white;
-  background-color: darkseagreen;
 }
 
 .row {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+}
+
+.row-space-between {
+  margin-left: 0.3rem;
+  margin-right: 0.3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -195,7 +204,7 @@ a:visited {
 
 a:hover {
   text-decoration: underline;
-  color:antiquewhite;
+  color: antiquewhite;
 }
 
 a:active {
@@ -224,11 +233,6 @@ a:active {
 
 .latlon {
   font-size: 0.9rem;
-}
-
-.title {
-  font-size: 1.5rem;
-  font-weight: bold;
 }
 
 /*** LoginPage ***/
@@ -287,6 +291,9 @@ table td {
 }
 
 .card-map {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 20vw;
 }
 
