--- a/src/App.css
+++ b/src/App.css
@@ -194,15 +194,23 @@ button:active {
 /*** Home page ***/
 #place {
   text-align: left;
+  margin-bottom: 2px;
+}
+
+#place-input {
+  width: 100%;
+  margin: 0;
 }
 
 #memo {
+  margin-top: 5px;
+  margin-bottom: 2px;
   text-align: left;
 }
 
 #memo-input {
   width: 100%;
-  margin-top: 5px;
+  margin: 0;
 }
 
 #img-temp {
