--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,9 @@ button:active {
   height: var(--margin-navi);
   color: white;
   background-color: var(--navi-footer-background-color);
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 2.6rem;
   font-weight: bold;
 }
