--- a/src/components-common/recordform.css
+++ b/src/components-common/recordform.css
@@ -1,9 +1,9 @@
-#place {
+#name {
     text-align: left;
     margin-bottom: 2px;
   }
   
-  #place-input {
+  #name-input {
     width: 100%;
     margin: 0;
   }
